--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
   <body>
     <div class="container-fluid">
 
-      <h2>CSV to HTML Table</h2>
-
-      <p>Display any CSV file as a searchable, filterable, pretty HTML table. Done in 100% JavaScript. <a href='https://github.com/derekeder/csv-to-html-table'>Code on GitHub</a>.</p>
-
-      <p>Here's a table of Health Clinics from the <a href='https://data.cityofchicago.org/browse?q=health%20clinic&sortBy=relevance&utf8=%E2%9C%93'>City of Chicago Data Portal</a>.</p>
-      
+      <p>Argument Type Prediction</p> 
       <div id='table-container'></div>
 
     </div><!-- /.container -->
@@ -59,12 +54,12 @@
       }
 
       CsvToHtmlTable.init({
-        csv_path: 'data/Health Clinics in Chicago.csv', 
+        csv_path: 'data/parsed_wiki_sentences_mentions_gold.csv', 
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
         datatables_options: {"paging": false},
-        custom_formatting: [[4, format_link]]
+	custom_formatting: [[4, format_link]]
       });
     </script>
   </body>
