--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>CSV to HTML Table</title>
-    <meta name="author" content="Derek Eder">
-    <meta content="Display any CSV file as a searchable, filterable, pretty HTML table" />
+    <title>Argument Type Prediction Data Table</title>
+    <meta name="author" content="Eunsol Choi">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +22,7 @@
   <body>
     <div class="container-fluid">
 
-      <p>Argument Type Prediction</p> 
+      <h2>Argument Type Prediction</h2> 
       <div id='table-container'></div>
 
     </div><!-- /.container -->
