Adding second page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="container-fluid">
 
       <h2>Argument Type Prediction</h2> 
+      <h3> News wire text <a href="https://eunsol.github.io/csv-to-html-table/index2.html"></h3>
       <div id='table-container'></div>
 
     </div><!-- /.container -->
