--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,6 @@
 
       <h2>Argument Type Prediction</h2> 
       <h3> News wire text <a href="https://eunsol.github.io/csv-to-html-table/index2.html"></h3>
-      <h3> BBN text <a href="https://eunsol.github.io/csv-to-html-table/index3.html"></h3>
       <div id='table-container'></div>
 
     </div><!-- /.container -->
@@ -45,7 +44,9 @@
     <script src="js/jquery.dataTables.min.js"></script>
     <script src="js/dataTables.bootstrap.js"></script>
     <script src='js/csv_to_html_table.js'></script>
-
+<style>
+k {color:red;}
+</style>
     <script>
       function format_link(link){
         if (link)
@@ -53,14 +54,19 @@
         else
           return "";
       }
-
+      function hide_possible(link){
+        if (link)
+          return "<k>" + link + "</k>";
+        else
+          return "";
+      }
       CsvToHtmlTable.init({
-        csv_path: 'data/parsed_wiki_sentences_mentions_gold.csv', 
+        csv_path: 'data/bbn_mentions.csv', 
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
         datatables_options: {"paging": false},
-	custom_formatting: [[4, format_link]]
+	custom_formatting: [[4, format_link], [2, hide_possible]]
       });
     </script>
   </body>
