--- a/index3.html
+++ b/index3.html
@@ -24,6 +24,8 @@
 
       <h2>Argument Type Prediction</h2> 
       <h3> News wire text <a href="https://eunsol.github.io/csv-to-html-table/index2.html"></h3>
+	<button id="hide">Hide</button> 
+	<button id="hide">Show</button> 
       <div id='table-container'></div>
 
     </div><!-- /.container -->
@@ -48,7 +50,15 @@
 k {color:red;}
 </style>
     <script>
-      function format_link(link){
+     $(document).ready(function(){
+    $("#hide").click(function(){
+        $("k").hide();
+    });
+    $("#show").click(function(){
+        $("k").show();
+    });
+}); 
+     function format_link(link){
         if (link)
           return "<a href='" + link + "' target='_blank'>" + link + "</a>";
         else
