--- a/index3.html
+++ b/index3.html
@@ -25,6 +25,7 @@
       <h2>Argument Type Prediction</h2> 
       <button id="hide">Hide mention</button> 	<button id="show">Show mention</button> 
       <div id='table-container'></div>
+      <div id='table-container'></div>
 
     </div><!-- /.container -->
 
