chunk fixed a bit

--- a/index2.html
+++ b/index2.html
@@ -75,7 +75,7 @@ k {color:red;}
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
         datatables_options: {"paging": false},
-	custom_formatting:  [3, hide_possible], [4, hide_possible]]
+	custom_formatting:  [[3, hide_possible], [4, hide_possible]]
       });
     </script>
   </body>
