--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ k {color:red;}
           return "";
       }
       CsvToHtmlTable.init({
-        csv_path: 'data/annot1.csv', 
+        csv_path: 'data/EE_output.csv', 
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
