--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@ k {color:red;}
           return "";
       }
       CsvToHtmlTable.init({
-        csv_path: 'data/annot2.csv',
+        csv_path: 'data/EE_output_ontonote.csv',
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
