--- a/index3.html
+++ b/index3.html
@@ -70,7 +70,7 @@ k {color:red;}
           return "";
       }
       CsvToHtmlTable.init({
-        csv_path: 'data/bbn_mentions.csv', 
+        csv_path: 'data/EE_output_wiki.csv', 
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
