--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@ k {color:red;}
           return "";
       }
       CsvToHtmlTable.init({
-        csv_path: 'data/EE_output_wiki_five.csv',
+        csv_path: 'data/onto_maximal.csv',
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
