--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ k {color:red;}
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
-        datatables_options: {"paging": true}
+        datatables_options: {"paging": true, "lengthMenu": [ 10, 25, 50, 75, 100 ]}
       });
     </script>
   </body>
