--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ k {color:red;}
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
-        datatables_options: {"paging": true, "lengthMenu": [ 10, 25, 50, 75, 100 ], "columnDefs": [{"width": 400, "targets": 1}],  fixedColumns: true}
+        datatables_options: {"paging": true, "lengthMenu": [ 10, 25, 50, 100 ]}
       });
     </script>
   </body>
